After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795573 - Wrong poppler-glib header used
Wrong poppler-glib header used
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Miners
2.0.x
Other Linux
: Normal normal
: ---
Assigned To: tracker-general
tracker-general
https://github.com/NixOS/nixpkgs/issu...
Depends on:
Blocks:
 
 
Reported: 2018-04-26 10:46 UTC by Jan Tojnar
Modified: 2018-06-21 22:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
extract/pdf: fix poppler-glib header name (1.14 KB, patch)
2018-04-26 10:49 UTC, Jan Tojnar
committed Details | Review

Description Jan Tojnar 2018-04-26 10:46:48 UTC
When I try to build tracker-miners on NixOS, I get the following error:

../src/tracker-extract/tracker-extract-pdf.c:38:10: fatal error: glib/poppler.h: No such file or directory
 #include <glib/poppler.h>
          ^~~~~~~~~~~~~~~~

Apparently, wrong header is used. The documentation suggests <poppler.h>:

https://people.freedesktop.org/~ajohnson/docs/poppler-glib/PopplerDocument.html#PopplerDocument.includes
Comment 1 Jan Tojnar 2018-04-26 10:49:06 UTC
Created attachment 371422 [details] [review]
extract/pdf: fix poppler-glib header name

The extractor was trying to include <glib/poppler.h> but poppler-glib.pc
contains the following:

    Cflags: -I${includedir}/poppler/glib

This resulted in the header not being found on NixOS.

This patch switches to the correct header name, congruent with the
documentation:

https://people.freedesktop.org/~ajohnson/docs/poppler-glib/PopplerDocument.html#PopplerDocument.includes
Comment 2 Carlos Garnacho 2018-06-21 22:07:29 UTC
Pushed to master, thanks!

Attachment 371422 [details] pushed as 4b734ab - extract/pdf: fix poppler-glib header name