extract/pdf: fix poppler-glib header name

The extractor was trying to include <glib/poppler.h> but poppler-glib.pc
contains the following:

    Cflags: -I${includedir}/poppler/glib

This resulted in the header not being found on NixOS.

This patch switches to the correct header name, congruent with the
documentation:

https://people.freedesktop.org/~ajohnson/docs/poppler-glib/PopplerDocument.html#PopplerDocument.includes

https://bugzilla.gnome.org/show_bug.cgi?id=795573